2008-06-16 [paul]	3.4.0cvs97

	* src/Makefile.am
		keep the alphabetical order

2008-06-13 [mones]	3.4.0cvs96

	* src/autofaces.c
		Fix crasher ;-)
	* src/prefs_filtering_action.c
		Fixed cosmetic bug, processing also displays "Filtering"

2008-06-13 [mones]	3.4.0cvs95

	* src/Makefile.am
	* src/autofaces.c	** NEW FILE **	
	* src/autofaces.h	** NEW FILE **
	* src/compose.c
		Allow setting Faces and X-Faces globally and per-account
		from configuration files under ~/.claws-mail/autofaces

2008-06-13 [holger]	3.4.0cvs94

	* .cvsignore
		More files to ignore
	* src/gtk/inputdialog.c
	* src/gtk/inputdialog.h
		Make input dialog more generic so that a checkbox
		with custom text can be used in addition to the
		"remember this" checkbox
	* src/imap_gtk.c
	* src/mh_gtk.c
	* src/prefs_common.c
	* src/prefs_common.h
		Allow new folders to inherit the properties of the
		parent folder during folder creation

2008-06-13 [wwp]	3.4.0cvs93

	* src/addressbook.c
		a better fix for this string, won't break up translations,
		and is conform to other similar ones.

2008-06-13 [wwp]	3.4.0cvs92

	* src/addrduplicates.c
	* src/addressadd.c
	* src/addressbook.c
	* src/addressbook_foldersel.c
	* src/editgroup.c
		use tree decorations everywhere AB folders are used (AB tree pane,
		    add address to AB, select AB folder, edit group, custom attr, find dup
		    results), in order to match global style
		make double-clicks in AB's tree pane behave like in MW's folder tree pane:
		    double clicking on groups in tree pane does open the group edit dialog
		    double clicking on other items in tree pane does expand/collapse
		fix a missing space in AB's delete-folder dialog
		fix again edit button sensitivity (thanks to iwkse, this reworks cvs79)

	* src/foldersel.c
		make foldersel dialog show dotted lines according to global (hidden) prefs

2008-06-12 [colin]	3.4.0cvs91

	* src/compose.c
	* src/compose.h
		Fix bug 1635, 'Last character of message is truncated 